kubernetes/apps/apps/linkwarden/linkwarden/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: linkwarden-postgres
  labels:
    app: linkwarden-postgres
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: linkwarden-postgres
  template:
    metadata:
      labels:
        app: linkwarden-postgres
    spec:
      containers:
      - name: postgres
        image: postgres:16-alpine
        ports:
        - containerPort: 5432
          name: postgres
        volumeMounts:
        - name: data
          mountPath: /var/lib/postgresql/data
          subPath: postgres
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: linkwarden-data
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: linkwarden-meilisearch
  labels:
    app: linkwarden-meilisearch
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: linkwarden-meilisearch
  template:
    metadata:
      labels:
        app: linkwarden-meilisearch
    spec:
      containers:
      - name: meilisearch
        image: getmeili/meilisearch:v1.12.8
        ports:
        - containerPort: 7700
          name: http
        volumeMounts:
        - name: data
          mountPath: /meili_data
          subPath: meilisearch
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: linkwarden-data
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: linkwarden
  labels:
    app: linkwarden
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: linkwarden
  template:
    metadata:
      labels:
        app: linkwarden
    spec:
      containers:
      - name: linkwarden
        image: ghcr.io/linkwarden/linkwarden:v2.13.1
        ports:
        - containerPort: 3000
          name: http
        volumeMounts:
        - name: data
          mountPath: /data/data
          subPath: linkwarden
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: linkwarden-data
