kubernetes/apps/apps/linkwarden/linkwarden/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: linkwarden-postgres
  labels:
    app: linkwarden-postgres
spec:
  type: ClusterIP
  ports:
  - port: 5432
    targetPort: 5432
    protocol: TCP
    name: postgres
  selector:
    app: linkwarden-postgres
---
apiVersion: v1
kind: Service
metadata:
  name: linkwarden-meilisearch
  labels:
    app: linkwarden-meilisearch
spec:
  type: ClusterIP
  ports:
  - port: 7700
    targetPort: 7700
    protocol: TCP
    name: http
  selector:
    app: linkwarden-meilisearch
---
apiVersion: v1
kind: Service
metadata:
  name: linkwarden
  labels:
    app: linkwarden
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: linkwarden
